# speaky

./: .gitignore  README.md  agent.py  pyproject.toml
plugins/: pocket_tts_plugin.py  smart_turn.py  whisper_stt.py
